[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/Montserrat/Montserret-Size20.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/Montserrat/Montserret-Size26.tres" type="DynamicFont" id=2]
[ext_resource path="res://Opgave Scene.gd" type="Script" id=3]

[node name="Opgave Scene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
OptionButtonPath1 = NodePath("VBoxContainer/Question1/OptionButton")
OptionButtonPath2 = NodePath("VBoxContainer/Question2/OptionButton2")
OptionButtonPath3 = NodePath("VBoxContainer/Question3/OptionButton3")
OptionButtonPath4 = NodePath("VBoxContainer/Question4/OptionButton4")
OptionButtonPath5 = NodePath("VBoxContainer/Question5/OptionButton5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 736.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 2 )
text = "Et eller to ord"
align = 1

[node name="Question1" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 37.0
margin_right = 1280.0
margin_bottom = 69.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Question1"]
margin_left = 416.0
margin_right = 416.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="VBoxContainer/Question1"]
margin_left = 420.0
margin_top = 3.0
margin_right = 558.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 1 )
text = "Du skal vente"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/Question1"]
margin_left = 562.0
margin_right = 693.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 1 )
text = "---Vælg---"
align = 1

[node name="Label2" type="Label" parent="VBoxContainer/Question1"]
margin_left = 697.0
margin_top = 3.0
margin_right = 864.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 1 )
text = ", dit fucking svin"

[node name="Question2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 73.0
margin_right = 1280.0
margin_bottom = 105.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Question2"]
margin_left = 416.0
margin_right = 416.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="VBoxContainer/Question2"]
margin_left = 420.0
margin_top = 3.0
margin_right = 558.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 1 )
text = "Du skal vente"

[node name="OptionButton2" type="OptionButton" parent="VBoxContainer/Question2"]
margin_left = 562.0
margin_right = 693.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 1 )
text = "---Vælg---"
align = 1

[node name="Label2" type="Label" parent="VBoxContainer/Question2"]
margin_left = 697.0
margin_top = 3.0
margin_right = 864.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 1 )
text = ", dit fucking svin"

[node name="Question3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 109.0
margin_right = 1280.0
margin_bottom = 141.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Question3"]
margin_left = 416.0
margin_right = 416.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="VBoxContainer/Question3"]
margin_left = 420.0
margin_top = 3.0
margin_right = 558.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 1 )
text = "Du skal vente"

[node name="OptionButton3" type="OptionButton" parent="VBoxContainer/Question3"]
margin_left = 562.0
margin_right = 693.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 1 )
text = "---Vælg---"
align = 1

[node name="Label2" type="Label" parent="VBoxContainer/Question3"]
margin_left = 697.0
margin_top = 3.0
margin_right = 864.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 1 )
text = ", dit fucking svin"

[node name="Question4" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 145.0
margin_right = 1280.0
margin_bottom = 177.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Question4"]
margin_left = 416.0
margin_right = 416.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="VBoxContainer/Question4"]
margin_left = 420.0
margin_top = 3.0
margin_right = 558.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 1 )
text = "Du skal vente"

[node name="OptionButton4" type="OptionButton" parent="VBoxContainer/Question4"]
margin_left = 562.0
margin_right = 693.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 1 )
text = "---Vælg---"
align = 1

[node name="Label2" type="Label" parent="VBoxContainer/Question4"]
margin_left = 697.0
margin_top = 3.0
margin_right = 864.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 1 )
text = ", dit fucking svin"

[node name="Question5" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 181.0
margin_right = 1280.0
margin_bottom = 213.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Question5"]
margin_left = 416.0
margin_right = 416.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="VBoxContainer/Question5"]
margin_left = 420.0
margin_top = 3.0
margin_right = 558.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 1 )
text = "Du skal vente"

[node name="OptionButton5" type="OptionButton" parent="VBoxContainer/Question5"]
margin_left = 562.0
margin_right = 693.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 1 )
text = "---Vælg---"
align = 1

[node name="Label2" type="Label" parent="VBoxContainer/Question5"]
margin_left = 697.0
margin_top = 3.0
margin_right = 864.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 1 )
text = ", dit fucking svin"
[connection signal="item_selected" from="VBoxContainer/Question1/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="item_selected" from="VBoxContainer/Question2/OptionButton2" to="." method="_on_OptionButton2_item_selected"]
[connection signal="item_selected" from="VBoxContainer/Question3/OptionButton3" to="." method="_on_OptionButton3_item_selected"]
[connection signal="item_selected" from="VBoxContainer/Question4/OptionButton4" to="." method="_on_OptionButton4_item_selected"]
[connection signal="item_selected" from="VBoxContainer/Question5/OptionButton5" to="." method="_on_OptionButton5_item_selected"]
